syntax = "proto3";

package order;


option go_package = "proto/order;orderpb";

service OrderService{
    rpc ConfirmOrder (OrderConfirmRequest) returns (ConfirmOrderResponse);
}

message OrderConfirmRequest{
    uint32 order_id = 1;
    uint32 user_id  = 2;
    uint32 card_detail_id = 3;
    int32 total_price = 4;
    string status = 5;
    string phone_number = 6;
    int32 cash_back_value = 7;
}

message ConfirmOrderResponse {
    bool success = 1;
    string error = 2;
}